...
                android:id="@+id/txt_filter_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_by"
                android:textColor="@color/textSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_time"
                app:layout_constraintBottom_toBottomOf="@+id/btn_time"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginStart="@dimen/margin_main"
                app:layout_constraintStart_toEndOf="@id/txt_filter_by"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Parada"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edt_stops"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textSecondary"
                android:layout_marginStart="@dimen/margin_main"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_time">
...
